# SCA-module

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yaml
notebooks/: NOTEBOOK_OBJECTIVES.md  SCA_summary___retrieval_uncertainty.ipynb  SCA_uncertainty___IWA.ipynb  SCA_uncertainty___monte_carlo_California.ipynb  SCA_uncertainty___monte_carlo_MED.ipynb  SCA_uncertainty___residual_leakage.ipynb  SCA_uncertainty___wave_Doppler.ipynb
src/sca_module/: dopsca_setup.py  readers.py  retrieval.py  simulate_L1.py  simulate_L2.py
